# pythonCW6

./: .gitignore  README.md  pyproject.toml
skymarket/ads/: admin.py  apps.py  filters.py  models.py  serializers.py  views.py
skymarket/ads/migrations/: 0001_initial.py
skymarket/skymarket/: settings.py  urls.py
skymarket/users/: admin.py  managers.py  models.py  serializers.py  urls.py
skymarket/users/migrations/: 0001_initial.py  0002_alter_user_first_name_alter_user_last_name.py  0003_alter_user_is_active.py
